# siscon_saas

./: .env  .gitignore  README.md  app.js  index.html  install.py  prompt.md  pyproject.toml  requirements.txt
api/: image_processor.py
components/: CTA.js  Features.js  Footer.js  Header.js  Hero.js  ImageProcessor.js  LoginModal.js  ServiceView.js  Services.js  Sidebar.js
trickle/assets/: hero-background.json
trickle/notes/: README.md
trickle/rules/: rule_for_readme_maintenance.md
z_utils/: llm_tools.py  print_structure.py
