[project]
name = "siscon_saas"
version = "0.1.0"
description = "siscon_saas"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easy-media-utils>=0.1.5",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "litserve>=0.2.6",
    "openai>=1.65.4",
    "opencv-python>=4.11.0.86",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "termcolor>=2.5.0",
]

[tool.setuptools]
py-modules = []

